<resources>
    <string name="app_name">Zadanie3</string>
    <string name="title_home">Home</string>
    <string name="title_bmi">BMI</string>
    <string name="title_bmr">BMR</string>
    <string name="title_food_idea">Food idea</string>
    <string name="title_quiz">Quiz</string>
    <string name="quiz_start">Uruchom quiz</string>
    <string name="quiz_next">Następne</string>
    <string name="quiz_summary">Twój wynik to:</string>
    <string name="title_chart">Chart</string>
    <string name="weight_input">Weight in kg</string>
    <string name="height_input">Height in cm</string>
    <string name="age_input">Age in years</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="image">Image</string>
    <string name="error">Cos poszło źle, sprawdź pola</string>
    <string name="food_idea">Co zjesc?</string>
</resources>