<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_bmi"
        android:icon="@drawable/ic_baseline_calculate_24"
        android:title="@string/title_bmi" />

    <item
        android:id="@+id/navigation_bmr"
        android:icon="@drawable/ic_baseline_calculate_24"
        android:title="@string/title_bmr" />
    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_baseline_fact_check_24"
        android:title="@string/title_quiz" />

    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/ic_baseline_pie_chart_24"
        android:title="@string/title_chart" />

</menu>