<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.zadanie2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bmi"
        android:name="com.example.zadanie2.ui.bmi.BMIFragment"
        android:label="@string/title_bmi"
        tools:layout="@layout/fragment_bmi" />

    <fragment
        android:id="@+id/navigation_bmr"
        android:name="com.example.zadanie2.ui.bmr.BMRFragment"
        android:label="@string/title_bmi"
        tools:layout="@layout/fragment_bmr" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.zadanie2.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.example.zadanie2.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />
</navigation>